// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fetching user profile is able to fetch user profile with credentials 1`] = `
Object {
  "data": Object {
    "me": Object {
      "email": Any<String>,
      "name": "John Doe",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Fetching user profile is not able to fetch user profile without credentials 1`] = `
Object {
  "code": "BAD_USER_INPUT",
  "exception": Object {
    "errors": Object {
      "auth": "You are not authorized to perform this action",
    },
  },
}
`;

exports[`Logging in is able to login with correct credentials 1`] = `
Object {
  "data": Object {
    "login": Object {
      "jwt": Any<String>,
      "user": Object {
        "email": "jedi@knight.com",
        "name": "Jedi Knight",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Logging in is not able to login with wrong credentials 1`] = `
Object {
  "code": "BAD_USER_INPUT",
  "exception": Object {
    "errors": Object {
      "auth": "Please check your credentials and try again.",
    },
  },
}
`;

exports[`Signing up is able to signup successfully 1`] = `
Object {
  "data": Object {
    "signup": Object {
      "jwt": Any<String>,
      "user": Object {
        "email": "john@doe.com",
        "id": Any<String>,
        "name": "John Doe",
        "team": Object {
          "id": Any<String>,
          "name": "Test team",
        },
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Signing up is not able to signup with missing fields 1`] = `
Object {
  "code": "INTERNAL_SERVER_ERROR",
  "exception": Object {
    "code": "ValidationException",
    "message": "One or more parameter values were invalid: An AttributeValue may not contain an empty string",
    "requestId": "09a2369c-6c87-44d9-a97d-fbcddc00bb25",
    "retryDelay": 23.447413903244062,
    "retryable": false,
    "statusCode": 400,
    "time": 2019-08-08T11:12:48.889Z,
  },
}
`;

exports[`Updating user profile can update with valid fields 1`] = `
Object {
  "data": Object {
    "updateUser": Object {
      "email": "new@doe.com",
      "name": "New Doe",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
